@@ -1,3 +1,8 @@
+2019-10-23  Martin Liska  <mliska@suse.cz>
+
+	PR ipa/91969
+	* g++.dg/ipa/pr91969.C: New test.
+
 2019-10-22  Marc Glisse  <marc.glisse@inria.fr>
 
 	PR c++/85746
