@@ -1,3 +1,9 @@
+2019-10-23  Martin Liska  <mliska@suse.cz>
+
+	PR ipa/91969
+	* ipa-inline.c (recursive_inlining): Do not print
+	when curr->count is not initialized.
+
 2019-10-23  Richard Biener  <rguenther@suse.de>
 
 	* tree-vect-slp.c (vect_build_slp_tree_2): Do not build
